# Jejak

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .npmrc  DESIGN.md  PRODUCT.md  README.md  be-tracker.txt  deck-copy-en-v2.md  deck-copy-en.md  docker-compose.yml  jejak-master-implementation-brief.md  package.json  pitch-deck-20260715-191228.html  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.superstack/: idea-context.md  (+3 more)
contracts/soroban/: .gitignore  Cargo.toml
contracts/soroban/crates/asset-controller/: Cargo.toml
contracts/soroban/crates/asset-controller/src/: lib.rs
contracts/soroban/crates/claim-lifecycle/: Cargo.toml
contracts/soroban/crates/claim-lifecycle/src/: lib.rs
contracts/soroban/crates/common/: Cargo.toml
contracts/soroban/crates/common/src/: lib.rs
contracts/soroban/crates/eligibility-registry/: Cargo.toml
contracts/soroban/crates/eligibility-registry/src/: lib.rs
contracts/soroban/crates/facility/: Cargo.toml
contracts/soroban/crates/facility/src/: lib.rs
contracts/soroban/crates/integration-tests/: Cargo.toml
contracts/soroban/crates/integration-tests/src/: lib.rs
contracts/soroban/crates/integration-tests/test_snapshots/tests/: adverse_path_consumes_first_loss_and_resolves.1.json  expired_and_duplicate_attestations_are_rejected.1.json  happy_path_conserves_money_and_closes.1.json  issued_claim_can_recover_to_controlled_after_compensating_redeem.1.json  split_fee_allocation_and_bounds_hold.1.json
contracts/soroban/crates/resolution-manager/: Cargo.toml
contracts/soroban/crates/resolution-manager/src/: lib.rs
contracts/soroban/crates/servicing-waterfall/: Cargo.toml
contracts/soroban/crates/servicing-waterfall/src/: lib.rs
contracts/soroban/deployments/: testnet.json
contracts/soroban/scripts/: ensure-testnet-identities.sh  verify-testnet.sh
(+559 files in other folders)
