[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/eligibility-registry",
  "crates/claim-lifecycle",
  "crates/asset-controller",
  "crates/facility",
  "crates/servicing-waterfall",
  "crates/resolution-manager",
  "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.90"

[workspace.dependencies]
soroban-sdk = "=27.0.0"
jejak-common = { path = "crates/common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
