[package]
name = "jejak-claim-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
jejak-common.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

